# espreso

./: .gitignore  .gitlab-ci.yml  Bara-espreso.files  Bara-espreso.includes  LICENCE  README.md  anselm.sh  archer.sh  build-w-p  build.config.cray  build.config.debug  build.config.default  build.config.gcc  catalyst_pipeline.py  catalyst_pipeline_cube.py  clean-all.sh  comp_run.sh  compile-anselm-devel.sh  compile-local.sh  configuration.txt  espreso.ecf  espreso.supp  live.py  multibuild.sh  pardiso.lic  plane.py  pnr.py  pokus.py  pr.py  precice-config.xml  run-anselm.sh  run-local.sh  run-seq.sh  run.sh  salomon-qsub.sh  salomon.qsub.impi  salomon.qsub.mpt  salomon.sh  set_env_es_sal  set_env_es_sal_mpi  (+10 more)
apiwrapper/: wrapper.cpp  wrapper.h  wscript
app/: Makefile.Anselm  Makefile.Local  clean-all.sh  compile-anselm-system-intel-mpi.sh  compile-local.sh  decomposer.cpp  main.cpp  wscript  wscript.old
app/apiwrapper/: wrapper.cpp  wrapper.h
app/factory/: factory.cpp  factory.h
app/solver/: solver.cpp  solver.h
app/src/: catalyst.cpp  configuration.cpp  configuration.h  decomposer.cpp  instance.cpp  instance.h  main.cpp  parameter.h  test.cpp  wscript
assembler/: assembler.h  assembler.hpp  esassemblers.h  wscript
assembler/constraints/: equalityconstraints.cpp  equalityconstraints.h  equalityconstraints.hpp
assembler/gluing/: gluing.h  gluing.hpp
assembler/linear/: api.hpp  bem.hpp  elmer.hpp  fem.hpp  linear.h  linear.hpp
basis/: esbasis.h  wscript
bem/: wscript
benchmarks/: README.md  __init__.py  estest.py  evaluator.py  generator.py
catalyst/: compile-man.sh  wscript
composer/: composer.h  escomposer.h  wscript
config/: esconfig.cpp  esconfig.h  wscript
dependencies/: clone.all.sh  clone.aocl.sh  clone.cmake.sh  clone.gklib.sh  clone.metis.sh  clone.nvpl.sh  clone.parmetis.sh  clone.precice.sh  clone.suitesparse.sh  install.aocl.sh  install.cmake.sh  install.gklib.sh  install.metis32.sh  install.metis64.sh  install.nvpl.sh  install.parmetis32.sh  install.parmetis64.sh  install.precice.sh  install.suitesparse.sh
doc/: Doxygen.mk  Makefile
env/: a64fx_env.sh  anl.aurora.intel.mpich.mkl.oneapi.sh  barbora.gcc.openblas.openmpi.suitesparsenew.cuda.sh  bsc.mn5.cuda.mkl.ss.sh  bsc.mn5.gcc.cuda.mkl.ss.sh  bsc.mn5.gcc.ompi.mkl.cuda.sh  csc.lumi.cray.suitesparse.32.sh  csc.lumi.hipcc.mpich.mkl.rocm.sh  csc.lumi.intel.sh  csc.lumi.rocm.mkl.sh  csc.lumi.rocm.mpich.mkl.sh  csc.lumi.rocm.mpich.sh  e4.red.cuda.32.sh  e4arm.gcc.openblas.openmpi.suitesparsenew.cuda.sh  e4arm.sh  intel.itdc_training.oneapi.sh  intel.tiber.oneapi.sh  inteldevcloud.sh  it4i.cs.a64fx.modulepath.sh  it4i.cs.a64fx.openmpi.32.sh  it4i.cs.a64fx.openmpi.64.sh  it4i.cs.p01.a64fx.32.sh  it4i.cs.p03.amd.mi100.32.sh  it4i.cs.p08.amd.l3.32.sh  it4i.cs.p10.spr.hbm.32.sh  it4i.cs.p11.nvidia.grace.32.sh  it4i.cs.spr.sh  it4i.karolina.cuda.gcc.32.sh  it4i.karolina.cuda.gcc.suitesparse.sh  it4i.karolina.cuda.mkl.ss.sh  it4i.karolina.gcc.cuda.mkl.sh  it4i.karolina.gcc.cuda.mkl.ss.sh  it4i.karolina.gcc.cuda.ss.sh  it4i.karolina.gcc.ompi.mkl.cuda.sh  it4i.karolina.intel.32.sh  it4i.karolina.intel.cuda.mkl.ss.sh  it4i.karolina.intel.sctria.sh  it4i.karolina.openmpi.32.sh  it4i.karolina.openmpi.mkl.32.sh  karolina.gcc.openblas.openmpi.suitesparsenew.cuda.sh  (+54 more)
include/: espreso.h  feti4i.h  feti4i_fortran_interface.h90  mesio.h  metis.h  scotch.h
input/: esinput.h  loader.h  wscript
install/: README  build.config.cray  build.config.gcc  build.config.gcc.atp  build.config.gcc.meric  build.config.gcc.scorep  build.config.icpc
libespreso/: README.txt  apiexample.cpp  apitest.cpp  espreso.h  espreso_simple.h  feti4i.h  feti4i_fortran_def.h90  feti4i_fortran_interface.h90  makefile  mwe.cpp  wscript
libs/: metis.lib
machines/: anselm.sh  ansys_run.conf  salomon.qsub  salomon.sh  sisu.sh
mesh/: Makefile.Anselm  Makefile.Local  clean-all.sh  compile-anselm-system-intel-mpi.sh  compile-local.sh  esmesh.h  wscript
metis/: wscript
mumps/: makefile
output/: esoutput.h  store.h  wscript
permoncube/: Makefile.Anselm  Makefile.Local  clean-all.sh  compile-anselm-system-intel-mpi.sh  compile-local.sh  wscript
physics/: esphysics.h  physics.h  wscript
python/: config_espreso_python.py  espreso.py  myModul.py  plot_null_pivots.py  test001.py  wafutils.py
scripts/: SC_paper_AI.sh  SC_paper_AI_barbora_GCC.sh  SC_paper_AI_barbora_INTEL.sh  SC_paper_AI_karolina_GCC.sh  SC_paper_AI_karolina_INTEL.sh  SC_paper_data.sh  SC_paper_data_barbora_cpu.sh  SC_paper_data_barbora_gpu.sh  SC_paper_data_karolina_cpu.sh  SC_paper_data_karolina_gpu.sh  build.sh  feti_matrix_check.py  spaw_job_barbora.sh  spaw_job_barbora_AI.sh  spaw_job_karolina.sh  test.sh  utils.sh
solver/: Makefile.Anselm.devel  Makefile.Local  clean-all.sh  compile-anselm-system-intel-mpi-devel.sh  compile-local.sh  essolver.h  wscript
tests/: all.py  benchmarks.py  build.py  espreso.py  estest.py  exhaustive.py  input.py  internals.py  memory.py  mesh.py  nose2.cfg  output.py  outputmemory.py  run.assembler.feti.sh  run.assembler.sh  run.basic.sh  run.feti.sh  run.physical_solver.sh  show.errors.sh  solver.py  stability.py  test_groups.yml  utils.py
tools/: README  wscript
tools/ASYNC/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
tools/ASYNC/async/: Config.h  Dispatcher.h  ExecInfo.h  Module.h  ModuleBase.h  NoParam.h
tools/ASYNC/async/as/: Base.h  MPI.h  MPIAsync.h  MPIBase.h  MPIScheduler.h  Sync.h  Thread.h  ThreadBase.h
tools/ASYNC/tests/: CMakeLists.txt  Dispatcher.t.h  Module.t.h  mpirunner.tpl
tools/ASYNC/tests/as/: CMakeLists.txt  Executor.h  MPI.t.h  MPIScheduler.t.h  Sync.t.h  Thread.t.h  Thread_buffer.t.h
tools/ASYNC/utils/: .gitignore  .gitmodules  .travis.yml  COPYING  args.h  arrayutils.h  env.h  mathutils.h  path.h  stringutils.h
tools/ASYNC/utils/doc/: Doxyfile  gh_pages.sh  mainpage.h
tools/ASYNC/utils/tests/: CMakeLists.txt  args.t.h  arrayutils.t.h  common.t.h  env.t.h  logger.t.h  mathutils.t.h  progress.t.h  timeutils.t.h
tools/metis-5.1.0/libmetis/: CMakeLists.txt
(+6773 files in other folders)
